--- a/public/404.html
+++ b/public/404.html
@@ -35,7 +35,7 @@
 					</button>
 					<a class='brand' href='/'>
 						Branch
-						<sup>{alpha}</sup>
+						<sup>{beta}</sup>
 					</a>
 					<div class='nav-collapse collapse'>
 						<p class='navbar-text pull-right'>
