--- a/public/422.html
+++ b/public/422.html
@@ -34,7 +34,7 @@
           </button>
           <a class='brand' href='/'>
             Branch
-            <sup>{alpha}</sup>
+            <sup>{beta}</sup>
           </a>
           <div class='nav-collapse collapse'>
             <p class='navbar-text pull-right'>
