--- a/public/404.html
+++ b/public/404.html
@@ -1,26 +1,103 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
-</head>
+	<head>
+		<title>
+			Branch - Error - Content not Found (404)
+		</title>
 
-<body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
-  </div>
-</body>
+		<style>
+			@font-face {
+			font-family: 'baveuseregular';
+				src: url('/assets/fnt/baveuse-webfont.eot');
+				src: url('/assets/fnt/baveuse-webfont.eot?#iefix') format('embedded-opentype'),
+				url('/assets/fnt/baveuse-webfont.woff') format('woff'),
+				url('/assets/fnt/baveuse-webfont.ttf') format('truetype'),
+				url('/assets/fnt/baveuse-webfont.svg#baveuseregular') format('svg');
+				font-weight: normal;
+				font-style: normal;
+			}
+
+			html { 
+				height: 100%;
+				width: 100%;
+			}
+			body {
+				font-family: 'baveuseregular', arial;
+				color: white;
+				text-transform: uppercase;
+
+				margin: 0;
+				padding: 0;
+
+				min-width: 800px;
+				min-height: 100%;
+
+				background-image: url('/assets/img/YOURE-IN-THE-DANGER-ZONEEEEEEE.png');
+				background-size: contain;
+				background-color: #000;
+				background-position-x: right;
+				background-repeat: no-repeat;
+			}
+
+			.burt-reynolds {
+				background-image: url('/assets/img/bg.png');
+				background-repeat: no-repeat;
+				background-position: 0 15px;
+
+				margin-left: 150px;
+				margin-top: 10%;
+			}
+			.burt-reynolds > .content {
+				margin-left: 35px;
+			}
+			.burt-reynolds > .content > h1 {
+				font-size: 50pt;
+			}
+			.burt-reynolds > .content > h2 {
+				font-size: 25pt;
+				margin-top: -25px;
+				color: #ffa9a9;
+			}
+
+			.footer {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+			}
+			.footer > ul {
+				list-style-type: none;
+			}
+			.footer > ul > li {
+				display: inline;
+				margin-left: 10px;
+			}
+			.footer > ul > li > a {
+				text-decoration: none;
+				color: #e97900;
+			}
+			.footer > ul > li > a:hover {
+				text-decoration: underline;
+				color: #ff9c00;
+			}
+		</style>
+	</head>
+
+	<body>
+		<div class="burt-reynolds">
+			<div class="content">
+				<h1 class="WHAAAAAAAAAT">Danger Zone</h1>
+				<h2 class="sorry--mrs-archer---haha">Content not Found</h2>
+			</div>
+		</div>
+
+		<div class="footer">
+			<ul>
+				<li><a href="/">Branch Home</a></li>
+				<li class="mutex">|</li>
+				<li><a href="/legal/privacy">Privacy</a></li>
+				<li class="mutex">|</li>
+				<li><a href="https://github.com/TheTree/Branch/issues/new?title=Danger Zoneee&amp;labels=bug&amp;body=Just entered the Danger Zone">Submit Bug Report</a></li>
+			</ul>
+		</div>
+	</body>
 </html>
