--- a/public/404.html
+++ b/public/404.html
@@ -30,12 +30,11 @@
 				padding: 0;
 
 				min-width: 800px;
-				min-height: 100%;
 
 				background-image: url('/assets/img/YOURE-IN-THE-DANGER-ZONEEEEEEE.png');
 				background-size: contain;
 				background-color: #000;
-				background-position-x: right;
+				background-position: center right;
 				background-repeat: no-repeat;
 			}
 
