--- a/js/apps/web-placeholder/data/index.html
+++ b/js/apps/web-placeholder/data/index.html
@@ -8,16 +8,9 @@
 	<style>
 		body {
 			background-color: #000;
-			background: url('img/bg.png') no-repeat center center fixed;
-			-webkit-background-size: cover;
-			-moz-background-size: cover;
-			-o-background-size: cover;
+			background: url('bg.png') no-repeat center center fixed;
 			background-size: cover;
-			filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='img/bg.png', sizingMethod='scale');
-			-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='img/bg.png', sizingMethod='scale')";
-
 			color: #fff;
-
 			text-align: center;
 		}
 		article {
@@ -25,7 +18,7 @@
 			margin: 100px auto 0 auto;
 		}
 		article > .chemicals {
-			background: url('img/chemicals.png') no-repeat center center;
+			background: url('chemicals.png') no-repeat center center;
 			height: 160px;
 		}
 		article > .be-back-soon > h1 {
