--- a/typescript/index.html
+++ b/typescript/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
+</head>
 <body>
 	<div id="branch-goes-here-xoxo"></div>
 	<script src="./src/index.tsx"></script>
